<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.work.dkkovalev.testapplication.AddNewPointActivity">

    <EditText
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/et_title"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:hint="@string/edit_text_add_new_point_title_hint" />

    <EditText
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/et_description"
        android:layout_below="@+id/et_title"
        android:layout_alignParentStart="true"
        android:layout_marginTop="20dp"
        android:hint="@string/edit_text_add_new_point_description_hint" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_submit_adding"
        android:id="@+id/btn_submit_adding"
        android:layout_below="@+id/et_description"
        android:layout_alignEnd="@+id/et_description"
        android:layout_marginTop="30dp" />
</RelativeLayout>
